<resources>
    <string name="app_name">EvaluacionUnidad2</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="correo_electronico_hint">Correo electrónico</string>
    <string name="contrasenia_hint">Contraseña</string>
    <string name="usuario_hint">Usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="editar">Editar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnVolver">Volver</string>
</resources>